src/Tests/Spectre.Console.Tests/Expectations/Cli/Parsing/CannotAssignValueToFlag/Test_1.Output.verified.txt
Error: Flags cannot be assigned a value.

       dog --alive foo
           ^^^^^^^ Can't assign value